fix rust cache and surefire config
Signed-off-by: chenxu <chenxu@dmetasoul.com>